* fix overly popup menu alignment bug.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -109,12 +109,12 @@ $background: #fff;
   background-color: rgba(0, 0, 0, 0.3);
   position: fixed;
   z-index: 999;
-  top: -100px;
+  top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
-  height: 200%;
-  width: 100%;
+  //bottom: 0;
+  //right: 0;
+  height: 100vh;
+  width: 100vw;
   //background: #000;
 
   will-change: opacity;
